# RpiMotorLib

./: .gitignore  .pylintrc  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml
Documentation/: 28BYJ.md  CHANGELOG.md  DRV8833_DC.md  L298N_DC.md  L9110S_DC.md  MC1508_DC.md  Nema11A3967Easy.md  Nema11A4988.md  Nema11DRV8825.md  Nema11L298N.md  Nema11LV8729.md  Nema11MC150X.md  Nema11TB6612FNG.md  SG90.md  Servo_GPIO.md  Servo_RPI_GPIO.md  Servo_pigpio.md  TB6612FNG_DC.md  Transistor_DC.md  geany_run_script.sh  matrix.ods
Documentation/Software_Matrix/: Software_Matrix.md
Documentation/changelog/: CHANGELOG.md
Documentation/license/: LICENSE.txt
Documentation/matrix/: matrix.ods
RpiMotorLib/: BYJMotorTest.py  RpiMotorLib.py  RpiMotorScriptLib.py  SG90ServoTest.py  gpio_adapter.py  rpi_dc_lib.py  rpi_emergency_stop.py  rpi_pservo_lib.py  rpiservolib.py  settings.py
examples/Multi_Threading_Example/: MultiMotorThreading_BYJ.py  MultiMotorThreading_DRV8825.py
examples/dc_motors/: DRV8833_or_L9110S_DC_Test.py  L298_DCMot_Test.py  MX150X_DC_Test.py  TB6612FNG_DCMot_Test.py  Transistor_DC_Test.py
examples/pipx_example/: PIPXExample_1_ServoGPIOTest.py  PIPXExample_2_ServoGPIOTest.py  PIPXExample_3_A4988_Nema_Test.py
examples/servos/: ServoGPIOTest.py  ServoPIGPIOTest.py
examples/steppers/: A3967_Nema_Test.py  A4988_Nema_Test.py  BYJ_Motor_Test.py  DRV8825_Nema_Test.py  L298_Step_Test.py  LV8729_Nema_Test.py  MX150X_Nema_Test.py  TB6612FNG_Nema_Test.py
extra/Documentation/: 28BYJ.md  DRV8833_DC.md  L298N_DC.md  L9110S_DC.md  MX1508_DC.md  Nema11A3967Easy.md  Nema11A4988.md  Nema11DRV8825.md  Nema11L298N.md  (+8 more)
rpiMotorlib/: RpiMotorScirptLib.py  maintest.py  rpiMotorlib.py
rpimotorlib.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: A3967EasyNema.py  A3967_Nema_Test.py  A4988_Nema_Test.py  A4998NemaTest.py  BYJMotorTest.py  BYJ_Motor_Test.py  DRV8825NemaTest.py  DRV8825_Nema_Test.py  DRV8833_or_ L9110S_DC_Test.py  DRV8833_or_L9110S_DC_Test.py  L298DCtest.py  L298StepTest.py  L298_DCMot_Test.py  L298_Step_Test.py  LV8729_Nema_Test.py  MC150X_Nema_Test.py  MX150X_DC_Test.py  MX150X_Nema_Test.py  MultiMotorThreading.py  MultiMotorThreading_BYJ.py  MultiMotorThreading_DRV8825.py  README.md  SG90ServoTest.py  ServoGPIOTest.py  ServoPIGPIOTest.py  TB6612FNG_DCMot_Test.py  TB6612FNG_Nema_Test.py  TransistorDCtest.py  Transistor_DC_Test.py
tests/: conftest.py  test_dc_lib.py  test_emergency_stop.py  test_servo_lib.py  test_stepper_lib.py
(+8 files in other folders)
